# web-image-formats-research

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  index.html  justfile  pyproject.toml  robots.txt  sitemap-index.xml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  study.yml
config/: datasets.json  datasets.schema.json  encoding-results.schema.json  quality-results.schema.json  site.json  study.schema.json  svgo.config.mjs
config/studies/: avif-chroma-subsampling.json  avif-crop-impact.json  avif-quality-sweep.json  avif-speed-sweep.json  format-comparison.json  jpeg-crop-impact.json  jxl-crop-impact.json  jxl-effort-sweep.json  multi-format-resolution-impact.json  (+4 more)
datasets/: .gitkeep
docs/: 404.html  index.html  sitemap-0.xml  sitemap-index.xml
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
pages/: 404.html  index.html
report/: avif-chroma-subsampling.html  avif-crop-impact.html  avif-speed-sweep.html  format-comparison.html  index.html  jpeg-crop-impact.html  jxl-crop-impact.html  jxl-effort-sweep.html  resolution-impact.html  sitemap.xml  webp-crop-impact.html  webp-method-sweep.html
results/: .gitkeep
scripts/: analyze_study.py  encode_images.py  fetch_dataset.py  generate_comparison.py  generate_docs.py  generate_release_notes.py  generate_report.py  measure_quality.py  prepare_release_assets.py  run_pipeline.py  stage_github_pages.py
src/: __init__.py  analysis.py  comparison.py  dataset.py  encoder.py  interactive.py  interpolation.py  pipeline.py  preprocessing.py  quality.py  report_images.py  site_config.py  study.py
tests/: conftest.py  test_analysis.py  test_comparison.py  test_dataset.py  test_encoder.py  test_integration.py  test_interactive.py  test_interpolation.py  test_measure_quality_script.py  test_pipeline.py  test_preprocessing.py  test_quality.py  test_report.py  test_report_images.py  test_study.py  test_study_integration.py
(+1614 files in other folders)
